--- a/css/styles.css
+++ b/css/styles.css
@@ -237,6 +237,7 @@ a {
     position: absolute;
     top: 50%;
     left: 50%;
+    padding: 40px;
     min-width: 528px;
     min-height: 581px;
     border-radius: 4px;
@@ -276,8 +277,36 @@ a {
     transform: translate(-50%, -50%) scale(0);
 }
 
+.backdrop-hero {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: calc(23 / 14);
+    color:var(--secondary-text-color);
+    margin-bottom: 12px;
+}
 
+.form-field {
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    margin-bottom: 10px;
 
+    font-style: normal;
+    font-size: 12px;
+    line-height: calc(14 / 12);
+    letter-spacing: 0.01em;
+    color: #757575;
+}
+
+.form-field input {
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.form-field input::placeholder {
+    padding: 12px 16px;
+    color: rgba(117, 117, 117, 0.5);
+}
 
 /*----------  Feature-list ---------- */
 .feature-list {
@@ -593,7 +622,8 @@ a {
     margin-left: 70px;
 }
 
-.join-social {
+.join-social,
+.subscribe-form {
     display: flex;
     font-size: 14px;
     line-height: calc(16 / 14);   
@@ -645,6 +675,74 @@ a {
 .footer-social-item:focus {
     background-color:var(--accent-color) ;
 }
+
+
+
+
+
+
+/*---------- FOOTER SUBSCRIBE ----------  */
+
+.subscribe-form-area {
+    width: 358px;
+    height: 50px;
+    padding-left: 16px;
+    font-size: 16px;
+    line-height: calc(20 / 16);
+    color: rgba(255, 255, 255, 0.6);
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+}
+
+.footer-subscribe {
+    display: flex;
+    flex-direction: column;
+    margin-left: 93px;
+}
+
+.subscribe-button {
+    border: 0px solid transparent;
+    margin-left: 12px;
+    border-radius: 4px;
+    padding: 10px 28px;
+    min-width: 200px;
+    text-align: center;
+
+    background-color: var(--accent-color);
+    color:#FFFFFF;
+
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    cursor: pointer;
+    line-height: calc(30 / 16);
+    letter-spacing: 0.06em;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.subscribe-button:hover,
+.subscribe-button:focus {
+    background-color: #188CE8;
+}
+
+.subscribe {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.footer-subscribe-icon {
+    margin-left: 10px;
+    fill:#FFFFFF;
+    align-items: center;
+    justify-content: center;
+}
+
+
 
 /*----------  PORTFOLIO ------------------------------- */
 .site-filter {
